@@ -24,9 +24,10 @@
 
     <properties>
         <version.crossdata>0.1.1</version.crossdata>
-        <version.connector.commons>0.2.0</version.connector.commons>
+        <version.connector.commons>0.3.0-SNAPSHOT</version.connector.commons>
         <version.elasticsearch>1.3.2</version.elasticsearch>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
 
@@ -34,14 +35,13 @@
     <groupId>com.stratio.connector</groupId>
     <artifactId>stratio-connector-elasticsearch</artifactId>
     <version>0.2.1</version>
-    <description>Connector for ElasticSearch</description>
+
     <url>http://www.stratio.com</url>
     <name>ElasticSearch Connector</name>
-    <packaging>pom</packaging>
+    <description>The Crossdata connector for ElasticSearch</description>
 
-    <modules>
-        <module>connector-elasticsearch-core</module>
-    </modules>
+
+
 
     <licenses>
         <license>
@@ -51,15 +51,7 @@
         </license>
     </licenses>
 
-    <profiles>
-        <profile>
-            <id>functional</id>
-            <modules>
-                <module>connector-elasticsearch-core</module>
-                <module>connector-elasticsearch-ftest</module>
-            </modules>
-        </profile>
-    </profiles>
+
 
     <scm>
         <connection>scm:git:git@github.com:Stratio/stratio-connector-elasticsearch.git</connection>
@@ -94,8 +86,119 @@
 
     </distributionManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.stratio.connector</groupId>
+            <artifactId>stratio-connector-commons</artifactId>
+            <version>${version.connector.commons}</version>
+        </dependency>
+
+        <dependency>
+            <artifactId>crossdata-common</artifactId>
+            <groupId>com.stratio.crossdata</groupId>
+            <version>${version.crossdata}</version>
+        </dependency>
+
+        <dependency>
+            <artifactId>crossdata-connector</artifactId>
+            <groupId>com.stratio.crossdata</groupId>
+            <version>${version.crossdata}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>${version.elasticsearch}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.stratio.connector</groupId>
+            <artifactId>stratio-connector-commons</artifactId>
+            <classifier>tests</classifier>
+            <version>${version.connector.commons}</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>1.5.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>1.5.5</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.8</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
+    <profiles>
+           <profile>
+            <id>FT</id>
+        <build>
+
+<plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.18</version>
+            <configuration>
+                <includes>
+                    <include>**/*FT.java</include>
+                </includes>
+                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>integration-test</goal>
+                    </goals>
+                    <configuration>
+                        <includes>
+                            <include>**/*FT.class</include>
+                        </includes>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+</plugins>
+            </build>
+
+
+        </profile>
+    </profiles>
+
+
+
+
+
 
     <build>
+
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -135,12 +238,22 @@
                 </executions>
             </plugin>
 
+
+
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>2.18</version>
                 <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <argLine>${jacocoUT-argline}</argLine>
                     <argLine>-noverify</argLine>
+                    <skip></skip>
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
 
@@ -159,8 +272,60 @@
                     </archive>
                 </configuration>
             </plugin>
-        </plugins>
 
+
+
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.1.201405082137</version>
+                <configuration>
+                    <destFile>${basedir}/target/jacoco.exec</destFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>jacoco-initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+
+
+
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                    <formats>
+                        <format>xml</format>
+                    </formats>
+                </configuration>
+            </plugin>
+
+
+
+
+
+            <plugin>
+                <artifactId>crossdata-connector-maven-plugin</artifactId>
+                <groupId>com.stratio.crossdata</groupId>
+                <version>${version.crossdata}</version>
+                <configuration>
+                    <mainClass>com.stratio.connector.elasticsearch.core.ElasticsearchConnector</mainClass>
+                    <jmxPort>7190</jmxPort>
+                </configuration>
+            </plugin>
+
+
+        </plugins>
 
     </build>
 
